# Dissertation

./: .gitignore
engine/: Cargo.toml  test_results.txt
engine/benchmark/src/: lib.rs
engine/common/: Cargo.toml
engine/common/src/: lib.rs  tests.rs
engine/meshing/: Cargo.toml
engine/meshing/benches/: binary.rs
engine/meshing/src/: lib.rs
engine/meshing/src/basic/: mod.rs  voxel.rs
engine/meshing/src/binary/: common.rs  mod.rs
engine/meshing/src/binary/culled/: chunk.rs  mod.rs  voxel.rs
engine/meshing/src/binary/greedy/: chunk.rs  mod.rs  voxel.rs
engine/meshing/src/chunks/: chunk.rs  mod.rs  voxel.rs
engine/raytracing/: Cargo.toml
engine/raytracing/src/: lib.rs
engine/raytracing/src/flat/: mod.rs
engine/raytracing/src/svt64/: mod.rs  tree.rs
engine/render_common/: Cargo.toml
engine/render_common/src/: format.rs  lib.rs  shaders.rs  uniform_value.rs
engine/renderer/: Cargo.toml
engine/renderer/benches/: buffers.rs
engine/renderer/benches/buf/: write.rs
engine/renderer/benches/common/: mod.rs
engine/renderer/src/: basic_vertex.rs  buffers.rs  fence.rs  framebuffer.rs  indices.rs  input.rs  lib.rs  linux_optick_fake.rs  material.rs  state.rs  transform.rs  uniforms.rs
engine/renderer/src/bounds/: aabb.rs  mod.rs  sphere.rs
engine/renderer/src/buffers/: ebo.rs  fenced_buffer.rs  gpu_buffer.rs  mapping.rs  mod.rs  ssbo.rs  uniform_buffer.rs  vao.rs  vbo.rs
engine/renderer/src/camera/: frustum.rs  mod.rs  perspective.rs
engine/renderer/src/draw/: line.rs  mod.rs
engine/renderer/src/enums/: directions.rs  mod.rs
engine/renderer/src/indirect/: mod.rs
engine/renderer/src/math/: mod.rs  projection.rs  transform.rs
engine/renderer/src/mesh/: basic.rs  mod.rs  ninstanced.rs
engine/renderer/src/texture/: mod.rs  tex2d.rs
engine/renderer/src/vertex/: format.rs  mod.rs
engine/shader_macros/: Cargo.toml
engine/shader_macros/src/: build_glsl.rs  build_rust.rs  errors.rs  lib.rs  link_info.rs  parse_glsl.rs  parse_meta.rs  shader_info.rs  shader_var.rs  type_checking.rs  uniform.rs
engine/shader_macros/src/build_rust/: buffers.rs  compute.rs  program.rs  uniforms.rs  vertex.rs
engine/shader_macros/src/parse/: glsl.rs  meta.rs  mod.rs
engine/shader_macros/src/parse/glsl/: buffer.rs  constant.rs  function.rs  mod.rs  preprocessor.rs  struct.rs  uniform.rs  variable.rs
engine/shaders/: Cargo.toml
engine/shaders/src/: lib.rs
engine/shaders_common/: Cargo.toml
engine/shaders_common/src/: lib.rs
engine/src/: common.rs  main.rs  tests.rs  tri.rs  voxel.rs
engine/src/basic/: mod.rs  voxel.rs
engine/src/binary/: common.rs  mod.rs
engine/src/binary/culled/: chunk.rs  mod.rs  voxel.rs
engine/src/binary/greedy/: chunk.rs  mod.rs  voxel.rs
engine/src/chunks/: chunk.rs  mod.rs  voxel.rs
engine/src/meshing/: mod.rs
engine/src/meshing/basic/: mod.rs  voxel.rs
engine/src/meshing/binary/: common.rs  mod.rs
engine/src/meshing/chunks/: chunk.rs  voxel.rs
engine/src/raymarching/: mod.rs
engine/src/raytracing/: mod.rs
engine/src/raytracing/flat/: mod.rs
engine/src/raytracing/svt64/: mod.rs  tree.rs
engine/src/shaders/: block.glsl  lighting.glsl
(+18 files in other folders)
