[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["render_common", "renderer", "shader_macros", "shaders"]

[workspace.dependencies]
render_common = { path = "./render_common" }
renderer = { path = "./renderer/" }
glam = "0.30.0"
shaders = { path = "./shaders" }
gl = "0.14.0"
glutin = "0.32.2"
winit = "0.30.9"
log = { version = "0.4.26", features = ["std"] }

[dev-dependencies]
criterion = "0.5.1"

[dependencies]
renderer.workspace = true
shaders.workspace = true
glam.workspace = true
winit.workspace = true
gl.workspace = true
clap = { version = "4.5.31", features = ["derive"] }
bracket-noise = "0.8.7"
