[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
  "common",
  "meshing",
  "raytracing",
  "render_common",
  "renderer",
  "shader_macros",
  "shaders",
]

[workspace.dependencies]
common = { path = "./common" }
render_common = { path = "./render_common" }
renderer = { path = "./renderer/" }
glam = "0.30.0"
shaders = { path = "./shaders" }
gl = "0.14.0"
glutin = "0.32.2"
winit = "0.30.9"
log = { version = "0.4.26", features = ["std"] }

[dependencies]
meshing = { path = "./meshing" }
raytracing = { path = "./raytracing" }
renderer.workspace = true
common.workspace = true
shaders.workspace = true
glam.workspace = true
winit.workspace = true
gl.workspace = true
