[package]
name = "renderer"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "BufferWrites"
path = "benches/buffers.rs"
harness = false

[dependencies]
shaders.workspace = true
render_common.workspace = true
glam.workspace = true
gl.workspace = true
glutin.workspace = true
winit.workspace = true
common.workspace = true
glutin-winit = "0.5.0"
raw-window-handle = "0.6.2"
memoffset = "0.9.1"
[target.'cfg(windows)'.dependencies]
optick = { version = "1.3.4" }
